Fix color contrast and add button to gallery section

--- a/style.scss
+++ b/style.scss
@@ -170,6 +170,7 @@ h3 {
       height: 100%;
       object-fit: cover;
       transition: all 1s;
+      filter: grayscale(100%);
 
       &:hover {
         transform: scale(1.05);
@@ -247,6 +248,7 @@ h3 {
 
     img {
       width: 100%;
+      filter: grayscale(100%);
     }
 
     &:hover {
